syntax = "proto3";

package protos.ome.worker.v1beta1;

option go_package = "protos/ome/worker/v1beta1/workerV1beta";

service WorkerService {
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
  rpc GoOnline(GoOnlineRequest) returns (GoOnlineResponse) {}
  rpc GoOnPause(GoOnPauseRequest) returns (GoOnPauseResponse) {}
}

message GetStatusRequest {
  string worker_id = 1;
}

message GetStatusResponse {
  string worker_id = 1;
  string status = 2;
}

message GoOnlineRequest {
  string worker_id = 1;
}

message GoOnlineResponse {
  string worker_id = 1;
  string status = 2;
}

message GoOnPauseRequest {
  string worker_id = 1;
}

message GoOnPauseResponse {
  string worker_id = 1;
  string status = 2;
}
